--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -63,6 +63,7 @@ body {
   }
   .main_panel_components {
     overflow-x: auto;
+    overflow-y: hidden;
     margin-bottom: calc(#{$sidebar-height-sm} - 10px);
   }
 }
